--- a/edit-room-page.html
+++ b/edit-room-page.html
@@ -67,7 +67,7 @@
                 <label for="start-time">เวลา</label>
                 <input type="time" id="start-time" class="time-input" name="start_time" placeholder="เริ่ม" value="20:00">
                 <span class="inline-separator">-</span>
-                <input type="time" id="end_time" class="time-input" name="end_time" placeholder="สิ้นสุด" value="21:00">
+                <input type="time" id="end-time" class="time-input" name="end-time" placeholder="สิ้นสุด" value="21:00">
             </div>
 
             <div class="form-group">
