--- a/room-detail-page.html
+++ b/room-detail-page.html
@@ -40,7 +40,7 @@
 
             <div class="form-group">
                 <strong>ชื่อสถานที่</strong>
-                <span id="address-activity" class="address-activity">ห้องสมุด N10</span>
+                <span id="address-activity" class="address-activity">N10</span>
             </div>
 
             <div class="form-group">
