--- a/my-account-page.html
+++ b/my-account-page.html
@@ -40,9 +40,9 @@
                     </div>
                 </div>
             </div>
-            
+
             </div>
-            
+
             <div class="form-group">
                 <strong>Tag ที่สนใจ :</strong>
                 <ul class="tag-list-item">
@@ -68,14 +68,8 @@
         </section>
 
         <section class="account-tabs">
-            <div class="account-tab-box">
-                <button class="tab-btn-joined">กิจกรรมที่เข้าร่วม</button>
-                <button class="tab-btn-created">กิจกรรมที่สร้าง</button>
-            </div>
-        </section>
-
-        <section class="account-activities">
-            <div class="account-item-activity">
+            <strong class="account-tab-header">กิจกรรมที่เข้าร่วม</strong>
+            <ul class="rooms-List">
                 <li class="room-item">
                     <article>
                         <div class="header-item">
@@ -117,10 +111,14 @@
                         <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
                     </article>
                 </li>
+            </ul>
+        </section>
+
+        <section class="account-activities">
+            <div class="account-item-activity">
             </div>
         </section>
     </main>
-
 
     <footer class="login-footer">
         <div class="footer-links">
