--- a/edit-account-page.html
+++ b/edit-account-page.html
@@ -7,7 +7,6 @@
     <title>MODJOY - บัญชีของฉัน</title>
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css\page-home.css">
     <link rel="stylesheet" href="./css/page-my-account.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +18,7 @@
 
 <body>
     <header class="add-home-header">
-        <a href="/home-page.html" class="material-symbols-outlined">
+        <a href="/my-account-page.html" class="material-symbols-outlined">
             arrow_back_ios
         </a>
         <h2>แก้ไขโปรไฟล์</h2>
