--- a/my-account-page.html
+++ b/my-account-page.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>MODJOY - บัญชีของฉัน</title>
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css\page-home.css">
     <link rel="stylesheet" href="./css/page-my-account.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +52,7 @@
                 <div class="profile-about">
                     <strong>เกี่ยวกับฉัน :</strong>
                     <textarea readonly id="about-detail"
-                        class="about-detail-textarea">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, quia. Labore aliquid provident ut eaque commodi minus, quaerat sequi fuga sapiente magnam ex possimus quod error totam saepe et vitae accusamus non laboriosam obcaecati perspiciatis est? Accusantium fuga blanditiis eveniet provident quidem? Quod, at! Aspernatur iusto enim voluptatibus assumenda accusantium!</textarea>
+                        class="about-detail-textarea">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi illo blanditiis totam, fugit eos hic ab! Illo quidem soluta vel!</textarea>
                 </div>
             </div>
 
