--- a/edit-account-page.html
+++ b/edit-account-page.html
@@ -20,10 +20,10 @@
         <h2>แก้ไขโปรไฟล์</h2>
     </header>
 
-    <main class="account-main">
+    <main class="account-main-edit">
 
         <form action="" class="account-form">
-            
+
             <div class="form-group">
                 <label for="cover-image-input" class="add-cover-label">
                     <div class="add-cover-box">
