--- a/edit-account-page.html
+++ b/edit-account-page.html
@@ -34,22 +34,22 @@
             </div>
 
             <div class="form-group">
-                <strong for="user-fullname">ชื่อ</strong>
+                <label for="user-fullname">ชื่อ</label>
                 <input type="text" name="user-fullname" id="user-fullname" required>
             </div>
 
             <div class="form-group">
-                <strong for="user-lastname">นามสกุล</strong>
+                <label for="user-lastname">นามสกุล</label>
                 <input type="text" name="user-lastname" id="user-lastname" required>
             </div>
 
             <div class="form-group">
-                <strong for="user-email">อีเมล</strong>
+                <label for="user-email">อีเมล</label>
                 <input readonly type="email" name="user-email" id="user-email" required>
             </div>
 
             <div class="form-group">
-                <strong for="select-faculty">คณะ</strong>
+                <label for="select-faculty">คณะ</label>
                 <select name="select-faculty" id="select-faculty">
                     <option value="empty">-</option>
                     <option value="วิทยาศาสตร์">วิศวกรรมศาสตร์</option>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="form-group">
-                <strong for="select-years">ชั้นปี</strong>
+                <label for="select-years">ชั้นปี</label>
                 <select name="select-years" id="select-years">
                     <option value="empty">-</option>
                     <option value="1">1</option>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="form-group">
-                <strong for="user-about-detail">รายละเอียด</strong>
+                <label for="user-about-detail">รายละเอียด</label>
                 <textarea id="user-about-detail" name="user-about-detail" class="detail-textarea"
                     value="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi illo blanditiis totam, fugit eos hic ab! Illo quidem soluta vel!</textarea>
             </div>
