--- a/my-account-page.html
+++ b/my-account-page.html
@@ -16,8 +16,9 @@
 
 <body>
     <header class="account-header">
-        <a class="material-symbols-outlined" href="/home-page.html">menu</a>
+        <a class="material-symbols-outlined left-account-header" href="/home-page.html">menu</a>
         <h2>บัญชีของฉัน</h2>
+        <a class="material-symbols-outlined right-account-header" href="/home-page.html">settings</a>
     </header>
 
     <main class="account-main">
