--- a/home-page.html
+++ b/home-page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="/JavaScript/home-page.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap" />
     <link rel="stylesheet"
@@ -16,8 +17,43 @@
 </head>
 
 <body>
+    <nav class="side-bar active" id="sidebar">
+        <div class="sidebar-header">
+            <button class="material-symbols-outlined sidebar-close-btn" id="sidebar-close-btn"
+                aria-label="ปิดเมนู">close</button>
+            <div class="sidebar-profile-img">
+                <img src="/Resource/img/profile.jpg" alt="Profile Picture">
+            </div>
+
+            <div class="sidebar-name-group">
+                <h3 id="sidebar-user-name">นิกก้า ถ้ำดำ</h3>
+                <div class="creditperson">
+                    <span id="sidebar-user-credit">100</span>
+                    <img src="/Resource/img/credit.png" alt="credit icon">
+                </div>
+            </div>
+
+            <p id="sidebar-user-email">niagger911@gmail.com</p>
+        </div>
+
+        <ul class="sidebar-links">
+            <li><a href="/home-page.html"><span class="material-symbols-outlined">home</span><span>หน้าแรก</span></a>
+            </li>
+            <li><a href="/account-page.html"><span
+                        class="material-symbols-outlined">person</span><span>บัญชีของฉัน</span></a></li>
+            <li><a href="/my-created-activities.html"><span
+                        class="material-symbols-outlined">check_box</span><span>กิจกรรมที่สร้าง</span></a></li>
+            <li><a href="/my-history.html"><span
+                        class="material-symbols-outlined">history</span><span>ประวัติการเข้าร่วม</span></a></li>
+            <li><a href="/settings.html"><span
+                        class="material-symbols-outlined">settings</span><span>การตั้งค่า</span></a></li>
+        </ul>
+    </nav>
+
+    <div class="overlay" id="overlay"></div>
+
     <header class="home-header">
-        <a class="material-symbols-outlined" href="/login-page.html">menu</a>
+        <button class="material-symbols-outlined" id="sidebar-open-btn" aria-label="เปิดเมนู">menu</button>
         <img src="Resource/img/small-logo.png" alt="MODJOY Logo">
         <a class="material-symbols-outlined" href="/add-room-page.html">add</a>
     </header>
