--- a/settings-page.html
+++ b/settings-page.html
@@ -34,14 +34,14 @@
                     <span class="material-symbols-outlined">chevron_right</span>
                 </a>
 
-                <a href="/forgot-password-page.html" class="settings-item">
-                    <span>ลืมรหัสผ่าน</span>
+                <a href="/change-password-page.html" class="settings-item">
+                    <span>เปลี่ยนรหัสผ่าน</span>
                     <span class="material-symbols-outlined">chevron_right</span>
                 </a>
 
-                <button class="settings-item-logout" id="logout-button">
+                <a href="/login-page.html" class="settings-item settings-item-logout" id="logout-button">
                     ออกจากระบบ
-                </button>
+                </a>
             </div>
 
             <div class="settings-group">
