--- a/terms-of-use-page.html
+++ b/terms-of-use-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -10,9 +11,12 @@
     <link rel="stylesheet" href="./css/page-add-room.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
+
 <body>
 
     <header class="add-home-header">
@@ -22,23 +26,30 @@
 
     <main class="policy-main">
         <div class="policy-container">
-            
+
             <h1>ข้อตกลงการใช้งาน (Terms of Use)</h1>
             <p class="last-updated">อัปเดตล่าสุด: 15 พฤศจิกายน 2025</p>
 
-            <p>ยินดีต้อนรับสู่ MODJOY นี่คือโครงการเพื่อการศึกษา การเข้าใช้งานบริการนี้ถือว่าคุณยอมรับและตกลงที่จะปฏิบัติตามข้อตกลงเหล่านี้</p>
+            <p>ยินดีต้อนรับสู่ MODJOY นี่คือโครงการเพื่อการศึกษา
+                การเข้าใช้งานบริการนี้ถือว่าคุณยอมรับและตกลงที่จะปฏิบัติตามข้อตกลงเหล่านี้</p>
 
             <h2>1. การใช้งานที่อนุญาต</h2>
-            <p>คุณตกลงที่จะไม่ใช้บริการนี้เพื่อโพสต์เนื้อหาที่ผิดกฎหมาย, ลามกอนาจาร, หมิ่นประมาท, หรือสร้างความเกลียดชัง และจะไม่ใช้บริการนี้เพื่อวัตถุประสงค์เชิงพาณิชย์ใดๆ</p>
+            <p>คุณตกลงที่จะไม่ใช้บริการนี้เพื่อโพสต์เนื้อหาที่ผิดกฎหมาย, ลามกอนาจาร, หมิ่นประมาท, หรือสร้างความเกลียดชัง
+                และจะไม่ใช้บริการนี้เพื่อวัตถุประสงค์เชิงพาณิชย์ใดๆ</p>
 
             <h2>2. เนื้อหาที่สร้างโดยผู้ใช้</h2>
-            <p>คุณเป็นผู้รับผิดชอบแต่เพียงผู้เดียวต่อ "กิจกรรม" (Activity) และเนื้อหาทั้งหมดที่คุณสร้างขึ้น (เช่น รูปภาพ, ข้อความ, สถานที่) เราทำหน้าที่เป็นเพียง "พื้นที่กลาง" เท่านั้น และไม่รับผิดชอบต่อความถูกต้องหรือความปลอดภัยของกิจกรรมที่ผู้ใช้สร้าง</p>
+            <p>คุณเป็นผู้รับผิดชอบแต่เพียงผู้เดียวต่อ "กิจกรรม" (Activity) และเนื้อหาทั้งหมดที่คุณสร้างขึ้น (เช่น
+                รูปภาพ, ข้อความ, สถานที่) เราทำหน้าที่เป็นเพียง "พื้นที่กลาง" เท่านั้น
+                และไม่รับผิดชอบต่อความถูกต้องหรือความปลอดภัยของกิจกรรมที่ผู้ใช้สร้าง</p>
 
             <h2>3. ข้อจำกัดความรับผิดชอบ (สำคัญ)</h2>
-            <p>บริการนี้เป็นส่วนหนึ่งของ **โครงการเพื่อการศึกษา** เราให้บริการนี้ "ตามสภาพ" (As-Is) เราไม่รับประกันว่าบริการจะถูกต้อง 100%, ปลอดภัย, หรือทำงานโดยไม่มีข้อผิดพลาด (Bugs) เราจะไม่รับผิดชอบต่อความเสียหายใดๆ ที่เกิดจากการใช้งาน หรือการเข้าร่วมกิจกรรมจากบริการนี้</p>
+            <p>บริการนี้เป็นส่วนหนึ่งของ **โครงการเพื่อการศึกษา** เราให้บริการนี้ "ตามสภาพ" (As-Is)
+                เราไม่รับประกันว่าบริการจะถูกต้อง 100%, ปลอดภัย, หรือทำงานโดยไม่มีข้อผิดพลาด (Bugs)
+                เราจะไม่รับผิดชอบต่อความเสียหายใดๆ ที่เกิดจากการใช้งาน หรือการเข้าร่วมกิจกรรมจากบริการนี้</p>
 
             <h2>4. การสิ้นสุดบริการ</h2>
-            <p>เราขอสงวนสิทธิ์ในการระงับบัญชีของคุณหากคุณละเมิดกฎ หรือหยุดให้บริการทั้งหมดได้ตลอดเวลา (เช่น เมื่อโครงการนี้สิ้นสุดลง) โดยไม่จำเป็นต้องแจ้งให้ทราบล่วงหน้า</p>
+            <p>เราขอสงวนสิทธิ์ในการระงับบัญชีของคุณหากคุณละเมิดกฎ หรือหยุดให้บริการทั้งหมดได้ตลอดเวลา (เช่น
+                เมื่อโครงการนี้สิ้นสุดลง) โดยไม่จำเป็นต้องแจ้งให้ทราบล่วงหน้า</p>
 
         </div>
     </main>
@@ -54,4 +65,5 @@
         </p>
     </footer>
 </body>
+
 </html>
