--- a/edit-account-page.html
+++ b/edit-account-page.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>MODJOY - บัญชีของฉัน</title>
+    <title>MODJOY - แก้ไขโปรไฟล์</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/page-my-account.css">
+    <script src="/JavaScript/edit-account-page.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
@@ -25,9 +26,14 @@
         <form action="" class="account-form">
 
             <div class="form-group">
-                <label for="cover-image-input" class="add-cover-label">
-                    <div class="add-cover-box">
-                        <span class="add-cover-plus">+</span>
+                <label for="cover-image-input" class="add-cover-label profile-uploader">
+                    <div class="add-cover-box profile-image-circle" id="profile-image-container">
+                        <img src="/Resource/img/profile.jpg" class="profile-preview" id="profile-image-preview">
+                        <span class="add-cover-plus" id="add-cover-icon">+</span>
+                        <div class="edit-overlay">
+                            <span class="material-symbols-outlined">photo_camera</span>
+                            <span>เปลี่ยนรูป</span>
+                        </div>
                     </div>
                 </label>
                 <input type="file" id="cover-image-input" name="cover-image" class="hidden-file-input" accept="image/*">
@@ -83,12 +89,13 @@
                     <li>อ่านหนังสือ <button type="button" class="material-symbols-outlined">close</button></li>
                     <li>calculus <button type="button" class="material-symbols-outlined">close</button></li>
                 </ul>
+                <input type="hidden" name="tags_list" id="tags-list-hidden" value="">
             </div>
 
             <div class="form-group">
                 <label for="user-about-detail">รายละเอียด</label>
-                <textarea id="user-about-detail" name="user-about-detail" class="detail-textarea"
-                    value="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi illo blanditiis totam, fugit eos hic ab! Illo quidem soluta vel!</textarea>
+                <textarea id="user-about-detail" name="user-about-detail"
+                    class="detail-textarea">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi illo blanditiis totam, fugit eos hic ab! Illo quidem soluta vel!</textarea>
             </div>
 
             <div class="btn-box">
