--- a/edit-account-page.html
+++ b/edit-account-page.html
@@ -41,24 +41,25 @@
 
             <div class="form-group">
                 <label for="user-fullname">ชื่อ</label>
-                <input type="text" name="user-fullname" id="user-fullname" required>
+                <input type="text" name="user-fullname" id="user-fullname" value="มดตะนอย" required>
             </div>
 
             <div class="form-group">
                 <label for="user-lastname">นามสกุล</label>
-                <input type="text" name="user-lastname" id="user-lastname" required>
+                <input type="text" name="user-lastname" id="user-lastname" value="กัดเจ็บ" required>
             </div>
 
             <div class="form-group">
                 <label for="user-email">อีเมล</label>
-                <input readonly type="email" name="user-email" id="user-email" required>
+                <input readonly type="email" name="user-email" id="user-email" value="Modtanoy.gadj@kmutt.ac.th"
+                    required>
             </div>
 
             <div class="form-group">
                 <label for="select-faculty">คณะ</label>
                 <select name="select-faculty" id="select-faculty">
                     <option value="empty">-</option>
-                    <option value="วิทยาศาสตร์">วิศวกรรมศาสตร์</option>
+                    <option value="วิทยาศาสตร์" selected>วิศวกรรมศาสตร์</option>
                     <option value="วิทยาศาสตร์">ครุศาสตร์อุตสาหกรรมและเทคโนโลยี</option>
                     <option value="วิทยาศาสตร์">วิทยาศาสตร์</option>
                     <option value="วิทยาศาสตร์">เทคโนโลยีสารสนเทศ</option>
@@ -72,7 +73,7 @@
                 <label for="select-years">ชั้นปี</label>
                 <select name="select-years" id="select-years">
                     <option value="empty">-</option>
-                    <option value="1">1</option>
+                    <option value="1" selected>1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -81,15 +82,20 @@
 
             <div class="form-group">
                 <label for="user-tag">Tag :</label>
-                <div class="tag-group">
-                    <input type="text" id="user-tag" name="user-tag">
-                    <button type="button" class="btn">+</button>
+
+                <div class="tag-input-container">
+                    <div class="tag-group">
+                        <input type="text" id="user-tag-input" name="user-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก...">
+                        <button type="button" class="btn" id="add-tag-btn">+</button>
+                    </div>
+
+                    <div class="tag-suggestions" id="tag-suggestions">
+                    </div>
                 </div>
-                <ul class="tag-list-item">
-                    <li>อ่านหนังสือ <button type="button" class="material-symbols-outlined">close</button></li>
-                    <li>calculus <button type="button" class="material-symbols-outlined">close</button></li>
+                <ul class="tag-list-item" id="tag-list-display">
                 </ul>
                 <input type="hidden" name="tags_list" id="tags-list-hidden" value="">
+                <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 3 อัน)</p>
             </div>
 
             <div class="form-group">
