--- a/add-room-page.html
+++ b/add-room-page.html
@@ -26,9 +26,14 @@
         <form action="/add-room.html" class="add-room-form">
 
             <div class="form-group">
-                <label for="cover-image-input" class="add-cover-label">
-                    <div class="add-cover-box">
-                        <span class="add-cover-plus">+</span>
+                <label for="cover-image-input" class="add-cover-label profile-uploader">
+                    <div class="add-cover-box" id="profile-image-container">
+                        <img src="/Resource/img/bangmod.png" class="profile-preview" id="profile-image-preview">
+                        <span class="add-cover-plus" id="add-cover-icon">+</span>
+                        <div class="edit-overlay">
+                            <span class="material-symbols-outlined">photo_camera</span>
+                            <span>เปลี่ยนรูป</span>
+                        </div>
                     </div>
                 </label>
                 <p class="add-cover-hint">*เพิ่มรูปภาพกิจกรรมหรือสถานที่</p>
@@ -74,15 +79,19 @@
 
             <div class="form-group">
                 <label for="room-tag">Tag :</label>
-                <div class="tag-group">
-                    <input type="text" id="room-tag" name="room-tag">
-                    <button type="button" class="btn">+</button>
+                <div class="tag-input-container">
+                    <div class="tag-group">
+                        <input type="text" id="room-tag-input" name="room-tag" placeholder="พิมพ์เพื่อค้นหาแท็ก...">
+                        <button type="button" class="btn" id="add-tag-btn">+</button>
+                    </div>
+
+                    <div class="tag-suggestions" id="tag-suggestions">
+                    </div>
                 </div>
                 <ul class="tag-list-item" id="tag-list-display">
-                    <li>อ่านหนังสือ <button type="button" class="material-symbols-outlined">close</button></li>
-                    <li>calculus <button type="button" class="material-symbols-outlined">close</button></li>
                 </ul>
-                <input type="hidden" name="tags_list" id="tags-list-hidden" value="อ่านหนังสือ,calculus">
+                <input type="hidden" name="tags_list" id="tags-list-hidden" value="">
+                <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 5 อัน)</p>
             </div>
 
             <div class="btn-box">
