--- a/edit-room-page.html
+++ b/edit-room-page.html
@@ -27,9 +27,14 @@
         <form action="/update-room.html" class="add-room-form">
 
             <div class="form-group">
-                <label for="cover-image-input" class="add-cover-label">
-                    <div class="add-cover-box">
-                        <span class="add-cover-plus">+</span>
+                <label for="cover-image-input" class="add-cover-label profile-uploader">
+                    <div class="add-cover-box" id="profile-image-container">
+                        <img src="/Resource/img/bangmod.png" class="profile-preview" id="profile-image-preview">
+                        <span class="add-cover-plus" id="add-cover-icon">+</span>
+                        <div class="edit-overlay">
+                            <span class="material-symbols-outlined">photo_camera</span>
+                            <span>เปลี่ยนรูป</span>
+                        </div>
                     </div>
                 </label>
                 <p class="add-cover-hint">*เพิ่มรูปภาพกิจกรรมหรือสถานที่</p>
