--- a/edit-room-page.html
+++ b/edit-room-page.html
@@ -25,7 +25,6 @@
 
     <main class="add-home-main">
         <form action="/update-room.html" class="add-room-form">
-
             <div class="form-group">
                 <label for="cover-image-input" class="add-cover-label profile-uploader">
                     <div class="add-cover-box" id="profile-image-container">
@@ -43,12 +42,12 @@
 
 
             <div class="form-group">
-                <label for="room-id">ไอดีกิจกรรม</label>
+                <label for="room-id">ไอดี</label>
                 <input readonly type="text" id="room-id" name="room-id" required value="66080658656">
             </div>
 
             <div class="form-group">
-                <label for="room-name">ชื่อห้อง</label>
+                <label for="room-name">ชื่อกิจกรรม</label>
                 <input type="text" id="room-name" name="room-name" required value="อ่านแคลกันครับพวกลิง">
             </div>
 
