--- a/check-in-room-page.html
+++ b/check-in-room-page.html
@@ -18,6 +18,7 @@
     <header class="add-home-header">
         <button type="button" class="material-symbols-outlined" onclick="history.back()">arrow_back_ios</button>
         <h2>จัดการการเช็คชื่อกิจกรรม</h2>
+        <span class="header-blank"></span>
     </header>
     <main class="add-home-main">
 
