Add history detail button styles and update links in history page

--- a/history-page.html
+++ b/history-page.html
@@ -64,7 +64,7 @@
 
                 </div>
 
-                <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
+                <a class="history-detail-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
             </article>
         </li>
         <li class="room-item">
@@ -103,7 +103,7 @@
 
                 </div>
 
-                <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
+                <a class="history-detail-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
             </article>
         </li>
         <li class="room-item">
@@ -142,7 +142,7 @@
 
                 </div>
 
-                <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
+                <a class="history-detail-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
             </article>
         </li>
         <li class="room-item">
@@ -181,7 +181,7 @@
 
                 </div>
 
-                <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
+                <a class="history-detail-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
             </article>
         </li>
         <li class="room-item">
@@ -220,7 +220,7 @@
 
                 </div>
 
-                <a class="btn-room-item a-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
+                <a class="history-detail-btn" href="/room-detail-page.html">ดูรายละเอียด</a>
             </article>
         </li>
     </ul>
