Refactor image paths in edit-account-page and edit-room-page for consistency; update script loading to defer in edit-room-page.html for improved performance.

--- a/public/edit-account-page.html
+++ b/public/edit-account-page.html
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label for="cover-image-input" class="add-cover-label profile-uploader">
                     <div class="add-cover-box profile-image-circle" id="profile-image-container">
-                        <img title="Profile" src="/Resource/img/profile.jpg" class="profile-preview"
+                        <img title="Profile" src="./Resource/img/profile.jpg" class="profile-preview"
                             id="profile-image-preview">
                         <span class="add-cover-plus" id="add-cover-icon">+</span>
                         <div class="edit-overlay">
