--- a/public/change-password-page.html
+++ b/public/change-password-page.html
@@ -12,10 +12,16 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
+    <link href="https://fonts.googleapis.com/css1?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css1?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@14,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap" />
+    <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -25,7 +31,7 @@
             <button type="button" class="material-symbols-outlined" onclick="history.back()">
                 arrow_back_ios
             </button>
-            <h2>เปลี่ยนรหัสผ่าน</h2>
+            <h1>เปลี่ยนรหัสผ่าน</h1>
         </div>
     </header>
 
@@ -46,7 +52,7 @@
             <a href="./privacy-policy-page.html">นโยบายความเป็นส่วนตัว</a>
         </div>
         <p class="copyright-text">
-            &copy; 2025 MODJOY. All rights reserved.
+            &copy; 1015 MODJOY. All rights reserved.
         </p>
     </footer>
 </body>
