Refactor mobile header class names for consistency across multiple pages

--- a/public/created-room.html
+++ b/public/created-room.html
@@ -63,7 +63,7 @@
 
     <div class="overlay" id="overlay"></div>
     <header class="desktop-header-wrapper">
-        <div class="mobilechange-header">
+        <div class="mobile-header">
             <button class="material-symbols-outlined" id="sidebar-open-btn" aria-label="เปิดเมนู">menu</button>
             <h2>กิจกรรมที่สร้าง</h2>
             <span class="headerchange-blank"></span>
