--- a/public/home-page.html
+++ b/public/home-page.html
@@ -76,7 +76,7 @@
     <!-- #region header -->
     <header class="header-wrapper">
         <!-- #region home-header-mobile -->
-        <div class="mobilechange-header">
+        <div class="mobile-header">
             <button class="material-symbols-outlined" id="sidebar-open-btn" aria-label="เปิดเมนู">menu</button>
             <a href="./home-page.html"><img src="Resource/img/small-logo.png" alt="MODJOY Logo"></a>
             <a class="material-symbols-outlined" href="./add-room-page.html">add</a>
