--- a/public/my-account-page.html
+++ b/public/my-account-page.html
@@ -57,7 +57,7 @@
     </nav>
     <div class="overlay" id="overlay"></div>
     <header class="desktop-header-wrapper">
-        <div class="mobilechange-header">
+        <div class="mobile-header">
             <button class="material-symbols-outlined" id="sidebar-open-btn" aria-label="เปิดเมนู">menu</button>
             <h2>บัญชีของฉัน</h2>
             <a class="material-symbols-outlined right-account-header" href="./settings-page.html">settings</a>
