--- a/public/edit-account-page.html
+++ b/public/edit-account-page.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 <body>
-    <header class="desktop-header-wrapper">
+    <header class="header-wrapper">
         <div class="mobile-header">
             <button type="button" class="material-symbols-outlined" onclick="history.back()">arrow_back_ios</button>
             <h2>แก้ไขโปรไฟล์</h2>
